--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.9",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
