--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@tabler/icons-react": "^3.34.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.9",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
